package jobs4u.base.interviewModel.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import jobs4u.base.interviewModel.domain.InterviewModelSpecification;
import jobs4u.base.interviewModel.domain.InterviewModelSpecificationIdentifier;

public interface InterviewModelSpecificationRepository extends DomainRepository<InterviewModelSpecificationIdentifier, InterviewModelSpecification> {
}
