package jobs4u.base.jobOpeningsManagement.application.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import jobs4u.base.jobOpeningsManagement.domain.JobOpening;
import jobs4u.base.jobOpeningsManagement.utils.JobReference;


public interface JobOpeningRepository extends DomainRepository<JobReference, JobOpening> {
}

